# my-first-cpp-proj

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CMakeSettings.json  PMCoord.cpp  PMCoord.hpp  PMEncTable.cpp  PMEncTable.hpp  PMGate3.cpp  PMGate3.hpp  PMMotor.cpp  PMMotor.hpp  PMSys.cpp  PMSys.hpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  hello.hpp  main.cpp  my_first_cpp_proj.sln  my_first_cpp_proj.vcxproj  my_first_cpp_proj.vcxproj.filters  pm_chan.cpp  pm_chan.hpp  pm_enctable.cpp  pm_enctable.hpp  pm_gate3.cpp  pm_gate3.hpp  pm_motor.hpp  pm_servo.cpp  pm_sys.cpp  pm_sys.hpp
.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt  main.cpp  pm_coord.cpp  pm_coord.hpp  pm_gate3.cpp  pm_gate3.hpp  pm_motor.cpp  pm_servo.hpp
test/: CMakeLists.txt  pm_gate3_test.cpp
